--- a/index.html
+++ b/index.html
@@ -1,22 +1,8 @@
 <html>  
     <head>    
-        <title>Ricardo Parra-Cruz</title>  
+        <title>My First Site!</title>  
     </head>  
     <body>    
-        <p>I am an early career research scientist, who is passionate about industrial biotechnology, digital
-transformation, and bioengineering. I have 4+ years of experience in the field of protein,
-microbiology, and data science research. Besides, I have been closely involved with computational
-modeling tools, bioprocesses with an emphasis on waste management and recovery, as well as,
-process planning and biotech business development, which are crucial for the vaccine and pharma
-industry. I have strong experience working and leading multidisciplinary teams in Australia,
-Germany, South East Asia, UK, and Colombia. </p>
-   <p>
-    My interests are Jungle trekking, boxing, CrossFit, scuba diving, soccer/football, and reading
-  </p>
-  <p>Python (basic), R, Molecular Dynamics, Gaussian, Project management Data analysis, and UNIX commands CSS</p>
-  <p><a href="https://github.com/ricardoparra747/" target="_blank">GitHub</a></p>
-  <p><a href="https://github.com/ricardoparra747/Ricardo Parra_CV-2021.pdf" target="_blank">GitHub</a></p>
-  <p><a href="https://www.linkedin.com/in/ricardo-andr%C3%A9s-parra-cruz-phd-a7265247/" target="_blank">Linkedin</a></p>
-  <p id="command-prompt">>_</p>
+        <p>I created my first web page using GitHub Pages! </p>
     </body>
 </html>
