--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
-<html>  
-    <head>    
-        <title>My First Site!</title>  
-    </head>  
-    <body>    
-        <p>I created my first web page using GitHub Pages! </p>
-    </body>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adam personal webpage </title>
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu|VT323&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h1>Adam Gołubowski</h1>
+  <h2>About</h2>
+  <p>
+    I create computer programs to solve problems, automate stuff or process
+    data. I do that by composing simple elements into robust systems, by
+    collaborating to find a ubiquitous language, by looking for abstractions
+    and patterns, by creating relevant tests and by iterating towards solution.
+  </p>
+  <p>
+    Proud husband of Ula and father of Simona. Trying to find my place in
+    Białystok, Poland. I search for rhythms and patterns around me, in nature,
+    music and art. From time to time I can be found learning how to fly, losing
+    myself in a drumming circle, firing ceramics with my wife or taking pictures
+    of local street art.
+  </p>
+  <h2>Skills</h2>
+  <p>Java, Spring, Gradle, Git, Docker, Python, R, SAS, SQL, Spotfire, JavaScript, HTML, CSS</p>
+  <p>Java, Spring, Gradle, Git, Docker, Selenium, Cucumber, Python, R, SAS, SQL, Spotfire, JavaScript, HTML, CSS</p>
+  <h2>Stuff</h2>
+  <p><a href="https://github.com/adamgolubowski" target="_blank">GitHub</a></p>
+  <p><a href="https://www.facebook.com/wearemadeoffields/" target="_blank">We Are Made Of Fields</a></p>
+  <p><a href="https://www.instagram.com/north.east.street.art/" target="_blank">North-East Streetart</a></p>
+  <h2>Contact</h2>
+  <p><a href="https://pl.linkedin.com/in/adam-gołubowski-98a43892" target="_blank">Linkedin</a></p>
+  <p><a href="https://www.facebook.com/adam.go.338658" target="_blank">Facebook</a></p>
+  <p id="command-prompt">>_</p>
+</body>
 </html>
