--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html >
 <head>
   <meta charset="UTF-8">
@@ -7,31 +8,23 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Adam Gołubowski</h1>
+  <h1>Ricardo Parra-Cruz</h1>
   <h2>About</h2>
   <p>
-    I create computer programs to solve problems, automate stuff or process
-    data. I do that by composing simple elements into robust systems, by
-    collaborating to find a ubiquitous language, by looking for abstractions
-    and patterns, by creating relevant tests and by iterating towards solution.
+I am an early career research scientist, who is passionate about industrial biotechnology, digital
+transformation, and bioengineering. I have 4+ years of experience in the field of protein,
+microbiology, and data science research. Besides, I have been closely involved with computational
+modeling tools, bioprocesses with an emphasis on waste management and recovery, as well as,
+process planning and biotech business development, which are crucial for the vaccine and pharma
+industry. I have strong experience working and leading multidisciplinary teams in Australia,
+Germany, South East Asia, UK, and Colombia.
   </p>
-  <p>
-    Proud husband of Ula and father of Simona. Trying to find my place in
-    Białystok, Poland. I search for rhythms and patterns around me, in nature,
-    music and art. From time to time I can be found learning how to fly, losing
-    myself in a drumming circle, firing ceramics with my wife or taking pictures
-    of local street art.
-  </p>
-  <h2>Skills</h2>
-  <p>Java, Spring, Gradle, Git, Docker, Python, R, SAS, SQL, Spotfire, JavaScript, HTML, CSS</p>
-  <p>Java, Spring, Gradle, Git, Docker, Selenium, Cucumber, Python, R, SAS, SQL, Spotfire, JavaScript, HTML, CSS</p>
-  <h2>Stuff</h2>
-  <p><a href="https://github.com/adamgolubowski" target="_blank">GitHub</a></p>
-  <p><a href="https://www.facebook.com/wearemadeoffields/" target="_blank">We Are Made Of Fields</a></p>
-  <p><a href="https://www.instagram.com/north.east.street.art/" target="_blank">North-East Streetart</a></p>
+   <h2>Skills</h2>
+  <p>Python (basic), R, Molecular Dynamics, Gaussian, Project management Data analysis, and UNIX commands</p>
+   <h2>Stuff</h2>
+  <p><a href="https://github.com/ricardoparra747" target="_blank">GitHub</a></p>
   <h2>Contact</h2>
-  <p><a href="https://pl.linkedin.com/in/adam-gołubowski-98a43892" target="_blank">Linkedin</a></p>
-  <p><a href="https://www.facebook.com/adam.go.338658" target="_blank">Facebook</a></p>
+  <p><a href="https://www.linkedin.com/in/ricardo-andr%C3%A9s-parra-cruz-phd-a7265247/" target="_blank">Linkedin</a></p>
   <p id="command-prompt">>_</p>
 </body>
 </html>
