--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html >
 <head>
   <meta charset="UTF-8">
@@ -9,6 +8,9 @@
 </head>
 <body>
   <h1>Ricardo Parra-Cruz</h1>
+      <img src="/ricardoparra747/ricardoparra747.github.io/test.jpg" alt="Simply Easy Learning" width="200"
+         height="80">
+   </body>
   <h2>About</h2>
   <p>
 I am an early career research scientist, who is passionate about industrial biotechnology, digital
