--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@ Germany, South East Asia, UK, and Colombia.
    <h2>Stuff</h2>
   <p><a href="https://github.com/ricardoparra747" target="_blank">GitHub</a></p>
   <h2>Contact</h2>
-  <p><a href="https://www.linkedin.com/in/ricardo-andr%C3%A9s-parra-cruz-phd-a7265247/" target="_blank">Linkedin</a></p>
+    <div class="contact-box">
+                <a href="https://www.linkedin.com/in/ricardo-parra-cruz-phd-a7265247/" class="contact-link">
+                    <img src="https://img.shields.io/badge/LinkedIn-Profile-blue" alt="LinkedIn">
+                    LinkedIn
+                </a>
+            </div>
   <p id="command-prompt">>_</p>
 </body>
 </html>
